// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SidebarNavigation > matches the snapshot 1`] = `
"<div class="sideBar">
  <div class="header"><a class="iconButton logo logo" title="Home">
      <phwavesine class="icon" aria-hidden="true" size="32" weight="duotone"></phwavesine><span class="text visually-hidden"> Home </span>
    </a><button class="iconButton" type="button" title="Close Navigation">
      <phtextoutdent class="icon" aria-hidden="true" size="24" weight="duotone"></phtextoutdent><span class="text visually-hidden">Close Navigation</span>
    </button></div>
  <nav class="navigationWrapper">
    <ul class="navigation">
      <li class="sidebarItem"><a class="titleLink" title="Browse">
          <phcompass class="titleIcon" aria-hidden="true" weight="duotone" size="32"></phcompass>
          <h4 class="title">Browse</h4>
        </a>
        <ul class="items">
          <li><a exactactiveclass="current" class="iconButton link link" title="Discover">
              <phcompass class="icon" aria-hidden="true" size="24" weight="duotone"></phcompass><span class="text">Discover</span>
            </a>
            <!--v-if-->
          </li>
          <li><a exactactiveclass="current" class="iconButton link link" title="Music">
              <phmusicnotes class="icon" aria-hidden="true" size="24" weight="duotone"></phmusicnotes><span class="text">Music</span>
            </a>
            <!--v-if-->
          </li>
          <li><a exactactiveclass="current" class="iconButton link link" title="Radio Stations">
              <phradio class="icon" aria-hidden="true" size="24" weight="duotone"></phradio><span class="text">Radio Stations</span>
            </a>
            <!--v-if-->
          </li>
          <li><a exactactiveclass="current" class="iconButton link link" title="Podcasts">
              <phapplepodcastslogo class="icon" aria-hidden="true" size="24" weight="duotone"></phapplepodcastslogo><span class="text">Podcasts</span>
            </a>
            <!--v-if-->
          </li>
        </ul>
      </li>
      <li class="sidebarItem"><a class="titleLink" title="Your library">
          <phmusicnotes class="titleIcon" aria-hidden="true" weight="duotone" size="32"></phmusicnotes>
          <h4 class="title">Your library</h4>
        </a>
        <ul class="items">
          <li><a exactactiveclass="current" class="iconButton link link" title="Albums">
              <phvinylrecord class="icon" aria-hidden="true" size="24" weight="duotone"></phvinylrecord><span class="text">Albums</span>
            </a>
            <!--v-if-->
          </li>
          <li><a exactactiveclass="current" class="iconButton link link" title="Artists">
              <phusersthree class="icon" aria-hidden="true" size="24" weight="duotone"></phusersthree><span class="text">Artists</span>
            </a>
            <!--v-if-->
          </li>
          <li><a exactactiveclass="current" class="iconButton link link" title="Playlists">
              <phplaylist class="icon" aria-hidden="true" size="24" weight="duotone"></phplaylist><span class="text">Playlists</span>
            </a>
            <!--v-if-->
          </li>
          <li><a exactactiveclass="current" class="iconButton link link" title="Favourites">
              <phheart class="icon" aria-hidden="true" size="24" weight="duotone"></phheart><span class="text">Favourites</span>
            </a>
            <!--v-if-->
          </li>
          <li><a exactactiveclass="current" class="iconButton link link" title="Genres">
              <phwaveform class="icon" aria-hidden="true" size="24" weight="duotone"></phwaveform><span class="text">Genres</span>
            </a>
            <!--v-if-->
          </li>
        </ul>
      </li>
      <li class="sidebarItem"><a class="titleLink" title="Playlists">
          <phplaylist class="titleIcon" aria-hidden="true" weight="duotone" size="32"></phplaylist>
          <h4 class="title">Playlists</h4>
        </a>
        <ul class="items">
          <li><a exactactiveclass="current" class="iconButton link link" title="Random">
              <phqueue class="icon" aria-hidden="true" size="24" weight="duotone"></phqueue><span class="text">Random</span>
            </a>
            <!--v-if-->
          </li>
          <li>
            <!--v-if-->
            <!--v-if-->
          </li>
          <li>
            <!--v-if--><button class="iconButton fullWidth link link" type="button" title="Add playlist" data-test-id="item-component">
              <phlistplus class="icon" aria-hidden="true" size="24" weight="duotone"></phlistplus><span class="text"> Add playlist </span>
            </button>
          </li>
        </ul>
      </li>
    </ul>
  </nav>
</div>"
`;

exports[`SidebarNavigation > when toggle button is clicked > matches the snapshot 1`] = `
"<div class="sideBar">
  <div class="header"><a class="iconButton logo logo" title="Home">
      <phwavesine class="icon" aria-hidden="true" size="32" weight="duotone"></phwavesine><span class="text visually-hidden"> Home </span>
    </a><button class="iconButton" type="button" title="Open Navigation">
      <phtextindent class="icon" aria-hidden="true" size="24" weight="duotone"></phtextindent><span class="text visually-hidden">Open Navigation</span>
    </button></div>
  <nav class="navigationWrapper">
    <ul class="navigation">
      <li class="sidebarItem"><a class="titleLink" title="Browse">
          <phcompass class="titleIcon" aria-hidden="true" weight="duotone" size="32"></phcompass>
          <h4 class="title">Browse</h4>
        </a>
        <ul class="items">
          <li><a exactactiveclass="current" class="iconButton link link" title="Discover">
              <phcompass class="icon" aria-hidden="true" size="24" weight="duotone"></phcompass><span class="text">Discover</span>
            </a>
            <!--v-if-->
          </li>
          <li><a exactactiveclass="current" class="iconButton link link" title="Music">
              <phmusicnotes class="icon" aria-hidden="true" size="24" weight="duotone"></phmusicnotes><span class="text">Music</span>
            </a>
            <!--v-if-->
          </li>
          <li><a exactactiveclass="current" class="iconButton link link" title="Radio Stations">
              <phradio class="icon" aria-hidden="true" size="24" weight="duotone"></phradio><span class="text">Radio Stations</span>
            </a>
            <!--v-if-->
          </li>
          <li><a exactactiveclass="current" class="iconButton link link" title="Podcasts">
              <phapplepodcastslogo class="icon" aria-hidden="true" size="24" weight="duotone"></phapplepodcastslogo><span class="text">Podcasts</span>
            </a>
            <!--v-if-->
          </li>
        </ul>
      </li>
      <li class="sidebarItem"><a class="titleLink" title="Your library">
          <phmusicnotes class="titleIcon" aria-hidden="true" weight="duotone" size="32"></phmusicnotes>
          <h4 class="title">Your library</h4>
        </a>
        <ul class="items">
          <li><a exactactiveclass="current" class="iconButton link link" title="Albums">
              <phvinylrecord class="icon" aria-hidden="true" size="24" weight="duotone"></phvinylrecord><span class="text">Albums</span>
            </a>
            <!--v-if-->
          </li>
          <li><a exactactiveclass="current" class="iconButton link link" title="Artists">
              <phusersthree class="icon" aria-hidden="true" size="24" weight="duotone"></phusersthree><span class="text">Artists</span>
            </a>
            <!--v-if-->
          </li>
          <li><a exactactiveclass="current" class="iconButton link link" title="Playlists">
              <phplaylist class="icon" aria-hidden="true" size="24" weight="duotone"></phplaylist><span class="text">Playlists</span>
            </a>
            <!--v-if-->
          </li>
          <li><a exactactiveclass="current" class="iconButton link link" title="Favourites">
              <phheart class="icon" aria-hidden="true" size="24" weight="duotone"></phheart><span class="text">Favourites</span>
            </a>
            <!--v-if-->
          </li>
          <li><a exactactiveclass="current" class="iconButton link link" title="Genres">
              <phwaveform class="icon" aria-hidden="true" size="24" weight="duotone"></phwaveform><span class="text">Genres</span>
            </a>
            <!--v-if-->
          </li>
        </ul>
      </li>
      <li class="sidebarItem"><a class="titleLink" title="Playlists">
          <phplaylist class="titleIcon" aria-hidden="true" weight="duotone" size="32"></phplaylist>
          <h4 class="title">Playlists</h4>
        </a>
        <ul class="items">
          <li><a exactactiveclass="current" class="iconButton link link" title="Random">
              <phqueue class="icon" aria-hidden="true" size="24" weight="duotone"></phqueue><span class="text">Random</span>
            </a>
            <!--v-if-->
          </li>
          <li>
            <!--v-if-->
            <!--v-if-->
          </li>
          <li>
            <!--v-if--><button class="iconButton fullWidth link link" type="button" title="Add playlist" data-test-id="item-component">
              <phlistplus class="icon" aria-hidden="true" size="24" weight="duotone"></phlistplus><span class="text"> Add playlist </span>
            </button>
          </li>
        </ul>
      </li>
    </ul>
  </nav>
</div>"
`;
